// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add items to a sequence 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "baz",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "foo",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "bar",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 1,
    },
    "operation": 2,
  },
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "qux",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "foo",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "bar",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 1,
    },
    "operation": 2,
  },
]
`;

exports[`clear a sequence 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": null,
      "type": 1,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "foo",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "bar",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 1,
    },
    "operation": 5,
  },
]
`;

exports[`morph a component 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<i></i>",
      },
      "data": null,
      "type": 2,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 7,
  },
]
`;

exports[`morph a component into a primitive 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "foo",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 1,
  },
]
`;

exports[`morph a component into a sequence 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "foo",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "bar",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 1,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 6,
  },
]
`;

exports[`morph a root component 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<i></i>",
      },
      "data": null,
      "type": 2,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 7,
  },
]
`;

exports[`morph a sequence 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<i></i>",
      },
      "data": null,
      "type": 2,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 7,
  },
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "bar",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<i></i>",
      },
      "data": null,
      "type": 2,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "bar",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 7,
  },
]
`;

exports[`morph a sequence into a component 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "foo",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "foo",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "bar",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 1,
    },
    "operation": 7,
  },
]
`;

exports[`morph a sequence into a primitive 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "foo",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "foo",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "data": Object {
                "value": "bar",
              },
              "type": 0,
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "data": null,
          "type": 2,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 1,
    },
    "operation": 1,
  },
]
`;

exports[`remove items from a sequence 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "baz",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "bar",
      },
      "type": 0,
    },
    "operation": 0,
  },
  Object {
    "newNode": null,
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "baz",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 4,
  },
  Object {
    "newNode": null,
    "oldNode": Object {
      "children": Array [
        Object {
          "children": Array [],
          "component": null,
          "data": Object {
            "value": "qux",
          },
          "type": 0,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "data": null,
      "type": 2,
    },
    "operation": 4,
  },
]
`;

exports[`reorder items of a sequence 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "qux",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "foo",
      },
      "type": 0,
    },
    "operation": 0,
  },
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "baz",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "bar",
      },
      "type": 0,
    },
    "operation": 0,
  },
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "bar",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "baz",
      },
      "type": 0,
    },
    "operation": 0,
  },
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "foo",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "qux",
      },
      "type": 0,
    },
    "operation": 0,
  },
]
`;

exports[`update items of a sequence 1`] = `
Array [
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "baz",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "foo",
      },
      "type": 0,
    },
    "operation": 0,
  },
  Object {
    "newNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "qux",
      },
      "type": 0,
    },
    "oldNode": Object {
      "children": Array [],
      "component": null,
      "data": Object {
        "value": "bar",
      },
      "type": 0,
    },
    "operation": 0,
  },
]
`;
